[gd_scene load_steps=17 format=3 uid="uid://xt4fnaxbc2mi"]

[ext_resource type="PackedScene" path="res://scenes/game/item/item_deposit/item_deposit.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/game/gameobjects/fertilizer_producer.gd" id="2"]
[ext_resource type="Resource" uid="uid://cfca7q7atvdxp" path="res://scenes/game/item/items/fertilizer.tres" id="2_rxpdi"]
[ext_resource type="PackedScene" uid="uid://c67pvc4lw7inc" path="res://assets/models/distiller.glb" id="3_3how7"]
[ext_resource type="Script" path="res://scenes/game/ui_bar.gd" id="4"]
[ext_resource type="Material" uid="uid://b73s0v4anr5dp" path="res://assets/materials/distiller.tres" id="4_3i85c"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="5_dqrqr"]
[ext_resource type="FontFile" uid="uid://qgku7moi1efd" path="res://assets/fonts/scribbles.ttf" id="7_bwrvc"]
[ext_resource type="AudioStream" uid="uid://bkbonr5n6iila" path="res://assets/audio/machine/machine_accept_item.wav" id="9_u31bq"]
[ext_resource type="AudioStream" uid="uid://b28rn55hxvivr" path="res://assets/audio/machine/machine_loop.wav" id="10_u6fq4"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(4, 4, 1.5)

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(4, 4, 2)

[sub_resource type="LabelSettings" id="LabelSettings_4c0tk"]
font = ExtResource("7_bwrvc")
font_size = 25

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="5"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q04l6"]
_data = {
"RESET": SubResource("9"),
"fade_in": SubResource("5")
}

[node name="FertilizerProducer" type="StaticBody3D" node_paths=PackedStringArray("biomass_prog_bar", "production_prog_bar", "anim_player")]
collision_layer = 3
collision_mask = 0
script = ExtResource("2")
fertilizer_item_data = ExtResource("2_rxpdi")
biomass_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar")
production_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar2")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 2, 0)
shape = SubResource("1")

[node name="ItemSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1.7)

[node name="distiller" parent="." instance=ExtResource("3_3how7")]

[node name="obj-distiller" parent="distiller" index="0"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
surface_material_override/0 = ExtResource("4_3i85c")

[node name="CreateFertilizerTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ItemDeposit" parent="." instance=ExtResource("1")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 2, 0.2)
shape = SubResource("2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("5_dqrqr")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "fertilizer producer"

[node name="StatBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="1"]
visible = true

[node name="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar" index="0"]
text = "biomass"

[node name="StatBar2" type="ProgressBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("4")

[node name="Label" type="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_4c0tk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_q04l6")
}

[node name="DepositSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_u31bq")
bus = &"SoundFX"

[node name="ProducingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_u6fq4")
bus = &"SoundFX"

[connection signal="timeout" from="CreateFertilizerTimer" to="." method="_on_CreateFertilizerTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]

[editable path="distiller"]
[editable path="CanvasLayer/HintObjectInterface"]
